Bug 261329 - Cloned video MediaStreamTrack has another resolution than original track
Summary: Cloned video MediaStreamTrack has another resolution than original track
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebRTC (show other bugs)
Version: Safari 17
Hardware: iPhone / iPad Other
: P2 Major
Assignee: youenn fablet
URL:
Keywords: InRadar
: 262375 263373 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-09-08 05:46 PDT by ivan.zahrodskyi
Modified: 2024-01-11 05:14 PST (History)
6 users (show)

See Also:


Attachments
cloned_track_issue_sample (2.61 KB, text/html)
2023-09-08 05:46 PDT, ivan.zahrodskyi
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description ivan.zahrodskyi 2023-09-08 05:46:31 PDT
Created attachment 467602 [details]
cloned_track_issue_sample

Environment:
- iPadOS 17.0 (21A5326a)
- iOS 17.0


We noticed strange issue when sending cloned track via peer connection - cloned track has another resolution.

To reproduce this:
- get user media with constraints ({ video: { width: 640, height: 360 } })
- clone video track
- add this track to peer connection
Actual result: 
- track is send with resolution 960x540 (instead of 640x360)
Expected result:
- resolution should be the same as in the original track (640x360)

I create little sample to try this issue.
Comment 1 Radar WebKit Bug Importer 2023-09-15 05:47:16 PDT
<rdar://problem/115551680>
Comment 2 youenn fablet 2023-09-20 00:42:55 PDT
Pull request: https://github.com/WebKit/WebKit/pull/17964
Comment 3 EWS 2023-09-22 04:13:24 PDT
Committed 268307@main (a55b02b30969): <https://commits.webkit.org/268307@main>

Reviewed commits have been landed. Closing PR #17964 and removing active labels.
Comment 4 youenn fablet 2023-10-03 06:04:11 PDT
*** Bug 262375 has been marked as a duplicate of this bug. ***
Comment 5 youenn fablet 2024-01-11 05:14:02 PST
*** Bug 263373 has been marked as a duplicate of this bug. ***